remove avx512 which ryzen 4800h don't have

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,12 +4,12 @@ add_executable( ${EXE_NAME}
     calc_speed_up.cpp
     check.cpp
     dgemm_avx256.cpp
-    dgemm_avx512.cpp
-    dgemm_blocked.cpp
-    dgemm_unrolled.cpp
+	#    dgemm_avx512.cpp
+	#    dgemm_blocked.cpp
+	#dgemm_unrolled.cpp
     dgemm_basic.cpp
     dgemm_basic_blocked.cpp
-    dgemm_openmp.cpp
+	#dgemm_openmp.cpp
     get_timestamp.cpp
     main.cpp
     mtx.cpp
